paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.compile.log
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `lazy_static`
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:5:1
  |
5 | lazy_static::lazy_static! {
  | ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`

error[E0425]: cannot find value `i1` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:18:9
   |
18 |     if *i1.borrow() != 1 {
   |         ^^ not found in this scope

error[E0425]: cannot find value `i2` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:21:9
   |
21 |     if *i2.borrow() != 2 {
   |         ^^ not found in this scope

error[E0425]: cannot find value `i3` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:24:9
   |
24 |     if *i3.borrow() != 3 {
   |         ^^ not found in this scope

error[E0425]: cannot find value `i4` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:27:9
   |
27 |     if *i4.borrow() != 0 {
   |         ^^ not found in this scope

error[E0425]: cannot find value `i5` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:30:9
   |
30 |     if *i5.borrow() != 0 {
   |         ^^ not found in this scope

error[E0425]: cannot find value `p_i1` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:33:21
   |
33 |     if !Rc::ptr_eq(&p_i1, &i1) {
   |                     ^^^^ not found in this scope

error[E0425]: cannot find value `i1` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:33:28
   |
33 |     if !Rc::ptr_eq(&p_i1, &i1) {
   |                            ^^ not found in this scope

error[E0425]: cannot find value `p_i2` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:36:21
   |
36 |     if !Rc::ptr_eq(&p_i2, &i2) {
   |                     ^^^^ not found in this scope

error[E0425]: cannot find value `i2` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:36:28
   |
36 |     if !Rc::ptr_eq(&p_i2, &i2) {
   |                            ^^ not found in this scope

error[E0425]: cannot find value `p_i4` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:39:21
   |
39 |     if !Rc::ptr_eq(&p_i4, &i4) {
   |                     ^^^^ not found in this scope

error[E0425]: cannot find value `i4` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:39:28
   |
39 |     if !Rc::ptr_eq(&p_i4, &i4) {
   |                            ^^ not found in this scope

error[E0425]: cannot find value `p_i5` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:42:21
   |
42 |     if !Rc::ptr_eq(&p_i5, &i5) {
   |                     ^^^^ not found in this scope

error[E0425]: cannot find value `i5` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:42:28
   |
42 |     if !Rc::ptr_eq(&p_i5, &i5) {
   |                            ^^ not found in this scope

error[E0425]: cannot find value `i1` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:45:6
   |
45 |     *i1.borrow_mut() = 10;
   |      ^^ not found in this scope

error[E0425]: cannot find value `i2` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:46:6
   |
46 |     *i2.borrow_mut() = 20;
   |      ^^ not found in this scope

error[E0425]: cannot find value `i4` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:47:6
   |
47 |     *i4.borrow_mut() = 30;
   |      ^^ not found in this scope

error[E0425]: cannot find value `i5` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:48:6
   |
48 |     *i5.borrow_mut() = 40;
   |      ^^ not found in this scope

error[E0425]: cannot find value `p_i1` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:49:9
   |
49 |     if *p_i1.borrow() != 10 {
   |         ^^^^ not found in this scope

error[E0425]: cannot find value `p_i2` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:52:9
   |
52 |     if *p_i2.borrow() != 20 {
   |         ^^^^ not found in this scope

error[E0425]: cannot find value `p_i4` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:55:9
   |
55 |     if *p_i4.borrow() != 30 {
   |         ^^^^ not found in this scope

error[E0425]: cannot find value `p_i5` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:58:9
   |
58 |     if *p_i5.borrow() != 40 {
   |         ^^^^ not found in this scope

warning: unused import: `std::cell::RefCell`
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_003/target.rs:1:5
  |
1 | use std::cell::RefCell;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 22 previous errors; 1 warning emitted

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.